<resources>
    <string name="app_name">Румба! Подсчет очков</string>

    <string name="title">Румба!</string>
    <string name="roomba">Румба!</string>
    <string name="title_desc">Подсчет очков</string>
    <string name="new_game">Новая игра</string>
    <string name="rules">Правила</string>
    <string name="about">О программе</string>

    <string name="players2">2 игрока</string>
    <string name="players3">3 игрока</string>
    <string name="players4">4 игрока</string>
    <string name="players5">5 игроков</string>
    <string name="players6">6 игроков</string>

    <string name="game">Игра</string>
    <string name="game_exit">Выход из игры</string>
    <string name="do_save_game">Сохранить игру?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="cancel">Отмена</string>

    <string name="creationError">Ошибка создания игры</string>

    <string name="rulesContent">
        В Румбе используется стандартная 54-х картная колода (по тринадцать карт от двойки до туза 4-х мастей, а также два джокера – черный и красный).\n
Непосредственно игровой процесс представляет собой следующее:\n
На момент начала игры, каждый участник получает по пять карт из колоды, еще одна карта кладется на стол лицом вверх – это, так называемая, колода сброшенных карт. Оставшиеся карты кладутся рубашкой вверх в общую колоду.\n\n
    Каждая карта в игре обладает определенной стоимостью.\n
Joker – оценивается в 0 очков.\n
Туз “A” – стоит 1 очко\n
Король “K” - 10 очков\n
Дама “Q” - 10 очков\n
Валет “J” - 10 очков\n
от 2 до 10 - 2-10 очков\n
Сумма карт, которыми обладает игрок, представляет собой счет игрока в текущем раунде.\n\n

Цель каждого игрока заключается в том, чтобы на момент окончания раунда держать на руках НАИМЕНЬШУЮ сумму очков, иными словами иметь на руках самые «дешевые» карты.
На своем ходу игрок выбирает карты, от которых он бы хотел избавиться, и меняет их на одну карту либо из закрытой колоды, либо из колоды сброшенных карт. При этом, те карты, которые скидывает игрок попадают в колоду сброшенных карт и становятся доступны следующему игроку.
Преимуществом колоды для сброшенных карт является тот факт, что игрок видит, какую карту он берет. Однако, необходимо помнить, что соперники также видят эту карту.

        \n\nКомбинации:\n

Игрок имеет право скидывать любую одну карту или же комбинацию из нескольких карт.
В качестве комбинаций допускается использовать:\n
• Любое кол-во карт одного достоинства. Например: 2-е дамы, 3-и четверки, 4-е короля. Оказавшись в колоде для сброса, любая карта из этой комбинации будет доступна для выбора следующего игрока;\n
• «Стрит» - комбинация от 3-х и более карт одной масти, в которой стоимость каждой следующей карты на единицу больше стоимости предыдущей. Например: 5 червей, 6 червей, 7 червей . При этом в комбинации «стрит» может участвовать джокер, заменяя любую карту. Оказавшись в колоде для сброшенных карт, доступными для выбора следующего игрока оказываются только крайние карты.

        \n\nОкончание раунда:\n

Как только у одного из игроков на руках оказывается сумма очков меньше или равная 7, он может «крикнуть Румба», тем самым окончив раунд. Для того, чтобы объявить Румба, достаточно нажать представленную соответствующую кнопку.

По окончанию раунда все игроки открывают свои карты.
Победителем раунда объявляется игрок, набравший наименьшее количество очков на момент окончания раунда – к его общему игровому счету не прибавляется ни одного очка. Всем остальным игрокам в общий игровой счет начисляется сумма очков за те карты, что были у них на руках.
Если оказывается, что один из игроков имеет на руках сумму очков РАВНУЮ или МЕНЬШУЮ, чем была у игрока, крикнувшего РУМБА, то игрок, объявивший Румба, получает к набранным им очкам штраф в 20 очков. Поэтому необходимо быть осмотрительными при объявлении Румбы.

    \n\nОкончание игры:\n

Как только игрок набирает общую сумму очков за игру РАВНУЮ или ПРЕВЫШАЮЩУЮ 100 очков – он выбывает из игры.
Победителем считается последний из оставшихся игроков.</string>
</resources>