<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/DescTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            app:layout_constraintBottom_toTopOf="@id/guidelineTop"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingTop="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/guidelineTop">

            <Button
                android:id="@+id/btn2Players"
                style="@style/MainMenuButton"
                android:text="@string/players2"/>

            <Button
                android:id="@+id/btn3Players"
                style="@style/MainMenuButton"
                android:text="@string/players3"/>

            <Button
                android:id="@+id/btn4Players"
                style="@style/MainMenuButton"
                android:text="@string/players4"/>

            <Button
                android:id="@+id/btn5Players"
                style="@style/MainMenuButton"
                android:text="@string/players5"/>

            <Button
                android:id="@+id/btn6Players"
                style="@style/MainMenuButton"
                android:text="@string/players6"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>