<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".fragments.MenuFragment">

        <TextView
            android:id="@+id/tvMainTitle"
            style="@style/MainTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            app:layout_constraintBottom_toTopOf="@id/glCenterHorizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_baseline_info_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            style="@style/DescTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_desc"
            app:layout_constraintStart_toStartOf="@id/tvMainTitle"
            app:layout_constraintEnd_toEndOf="@id/tvMainTitle"
            app:layout_constraintTop_toBottomOf="@id/tvMainTitle"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glCenterHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/glRight"
            app:layout_constraintStart_toEndOf="@id/glLeft"
            app:layout_constraintTop_toBottomOf="@id/glCenterHorizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnStartGame"
                style="@style/MainMenuButton"
                android:text="@string/new_game" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRules"
                style="@style/MainMenuButton"
                android:text="@string/rules" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>